tests/parser/pass/v6_inline_block_stmt_end.ep
fun classify(n: i64): i64 {
    match n {
        0: { ret 10 }
        1: { ret 20 }
        else: { ret }
    }
}
