tests/parser/fail/v24_fail_match_else_removed.ep
# COMPILE_FAIL: match default uses _:, not else:
fun main(): void {
    match 1 {
        1: { ret }
        else: { ret }
    }
}
